--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://nkueng.github.io/MagicSwissWeed"
+  "homepage": "https://nkueng.github.io/MagicSwissWeed",
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
+  }
 }
