testing google analytics

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Magic Swiss Weed",
-  "name": "Magic Swiss Weed",
+  "short_name": "MSW",
+  "name": "MagicSwissWeed",
   "icons": [
     {
       "src": "favicon.ico",
