--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "magic-swiss-weed",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -39,6 +40,7 @@
   },
   "homepage": "https://nkueng.github.io/MagicSwissWeed",
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.22.11",
     "gh-pages": "^5.0.0"
   }
 }
