--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://nkueng.github.io/MagicSwissWeed/",
+  "homepage": "https://nkueng.github.io/MagicSwissWeed1.0/",
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.22.11",
     "gh-pages": "^5.0.0"
